# blender-zs

./: README.md  nl_modeler_addon.py
.github/workflows/: ci.yml
Blender-qkzn/: LICENSE  Makefile  README.md  pyproject.toml
Blender-qkzn/addons/blender_qkzn/: __init__.py  executor.py  llm_client.py  materials.py  operators.py  planner_client.py  schemas.py  ui_panel.py  utils.py
Blender-qkzn/addons/blender_qkzn/presets/: materials.json
Blender-qkzn/addons/blender_qkzn/tests/: test_executor_plan.py  test_rules_planner.py
Blender-qkzn/addons/pydantic/: __init__.py
Blender-qkzn/tools/: make_zip.py
