[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blender-qkzn"
version = "0.1.0"
description = "Blender AI assistant with Chinese rule-based planner"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=1.10,<2",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "black>=23.9",
  "ruff>=0.1.5",
  "mypy>=1.7",
]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
